--- a/MaihimeFXEnjuRW/build.gradle
+++ b/MaihimeFXEnjuRW/build.gradle
@@ -35,7 +35,7 @@ application {
 
 javafx {
     version = '17.0.1'
-    modules = ['javafx.controls', 'javafx.fxml']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web']
 }
 
 dependencies {
